@@ -1,3 +1,7 @@
+2010-01-04  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* library/tk.tcl: Correctly handle quoted ampersands in AmpMenuArgs
+
 2010-01-03  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tcl.m4 (SC_CONFIG_CFLAGS): [Bug 1636685]: Use the configuration
